<resources>
    <string name="app_name">go4lunch</string>

    <!-- TOOLBAR MENU -->
    <string name="menu_main_activity_search">Search</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Bottom navigation -->
    <string name="bottom_navigation_menu_workmates">Workmates</string>
    <string name="bottom_navigation_menu_list_view">List View</string>
    <string name="bottom_navigation_menu_map_view">Map View</string>


    <string name="info_no_email_found">Info no email found</string>
    <string name="info_no_username_found">Info no username found</string>

    <!-- For Facebook -->
    <string name="facebook_app_id" translatable="false">1326892067693127</string>
    <string name="facebook_application_id" translatable="false">1326892067693127</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1326892067693127</string>

    <!-- For Twitter -->
    <string name="twitter_consumer_key" translatable="false">eDFjM081OFcwLXBuUUNfWmtXbHA6MTpjaQ</string>
    <string name="twitter_consumer_secret" translatable="false">nbpgWgAH8Rhn84r9V6kiIHC5V9__CxqzE17rWXx3D86BCGf90X</string>

    <!-- For Opening Hours -->
    <string name="closed">Closed</string>
    <string name="no_time">No Time</string>
    <string name="closing_soon">Closing soon</string>
    <string name="open_24_7">Open </string>
    <string name="open_until">Open Until</string>
    <string name="format_time_display">hh.mma</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \\\'my location\' layer. Please try again and grant access to use the location. If the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="need_permission_message">This application needs permission to run</string>

    <string name="incorrect_email">Incorrect Email</string>
    <string name="incorrect_username">Username not long enough</string>

    <!-- For Settings Activity -->
    <string name="popup_message_confirmation_delete_account">Are you sure you want to delete your account?</string>
    <string name="popup_message_choice_no">No</string>
    <string name="popup_message_choice_yes">Yes</string>
    <string name="this_is_account_picture">This is account picture</string>

    <!-- For details View -->
    <string name="phone_button_text">CALL</string>
    <string name="website_button_text">WEBSITE</string>
    <string name="rating_resto">LIKED</string>
    <string name="website_button">Website button</string>
    <string name="this_is_the_check_pick_restaurant_button">This is the check pick restaurant button</string>
    <string name="start_button">Start button</string>
    <string name="call_button">Call button</string>
    <string name="first_start">First start</string>
    <string name="seconde_start">Seconde start</string>
    <string name="third_start">Third start</string>
    <string name="photo_restaurant">Photo restaurant</string>
    <string name="settings_username">Change Username</string>
    <string name="settings_email_address">Change email address</string>
    <string name="settings_update_user_information">Update user information</string>
    <string name="settings_delete_account">Delete account</string>
    <string name="settings_enable_notifications">Enable notifications</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_notification">Your lunch today</string>
    <string name="notification_message">You are eating at %s with %s on %s</string>
    <string name="message_notification_alone">You are eating at %s on %s</string>
    <string name="subtitle_notification">You have a lunch setup for today</string>

</resources>